blog/src/components/code.scss
@import "./variables.scss";
@import "shadows.scss";

.code-container {
    margin: 1rem 0;

    &::after {
      content: "";
      clear: both;
      display: table;
    }

    &.left {
      @media ($media-medium) {
        margin: 1rem 2rem 1rem 0;
        float: left;
        width: 75%;
      }

      &.sm {
        @media ($media-medium) {
          width: 50%;
        }
      }
    }
    
    &.right {
      @media ($media-medium) {
        margin: 1rem 0 1rem 2rem;
        float: right;
        width: 75%;
      }

      &.sm {
        @media ($media-medium) {
          width: 50%;
        }
      }
    }

    code[class*="language-"],
    pre[class*="language-"] {
      @include box-shadow-big($black);
      background: none;
      font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
      white-space: pre;
      word-spacing: normal;
      word-break: normal;
      word-wrap: normal;
      line-height: 1.5;

      -webkit-hyphens: none;
      -moz-hyphens: none;
      -ms-hyphens: none;
      hyphens: none;
    }

    /* Code blocks */
    pre[class*="language-"] {
      padding: 1rem;
      margin: .5rem 0;
      overflow: auto;
      border-radius: 0.3rem;
    }

    /* Inline code */
    :not(pre) > code[class*="language-"] {
      padding: .1rem;
      border-radius: .3rem;
      white-space: normal;
    }

  }
  

